# nixos-needsreboot

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
src/: compare_nixos_modules.rs  main.rs
