[package]
name = "nixos-needsreboot"
version = "0.2.0"
edition = "2021"
description = "Determine if you need to reboot your NixOS machine"
license = "GPL-2.0"
repository = "https://github.com/thefossguy/nixos-reedsreboot"
readme = "README.md"
keywords = ["nixos"]
categories = ["command-line-utilities"]

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
sdre-rust-logging = "0.3.22"
strum = "0.27.2"
strum_macros = "0.27.2"
